Fix: Fix toolbox overlapping issue

--- a/packages/evershop/src/components/common/form/Editor.scss
+++ b/packages/evershop/src/components/common/form/Editor.scss
@@ -1,7 +1,9 @@
 body .codex-editor {
   z-index: 99;
 }
-
+body .codex-editor:not(.codex-editor--toolbox-opened) {
+  z-index: 1 !important;
+}
 #rows {
   .row {
     background-color: #fff;
